samples/_failures_safe/1761800353_b0e5ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdbe11ae.c: In function ‘main’:
./samples/SAFE/__tmp_fdbe11ae.c:148:13: error: expected declaration or statement at end of input
  148 |             transpose_matrix(&mat1, &result);
      |             ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fdbe11ae.c:148:13: error: expected declaration or statement at end of input
